[project]
name = "sentineliq"
version = "0.1.0"
description = "SentinelIQ — AI-Powered Threat Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "langchain>=0.0.300",
  "openai>=0.27.0",
  "sqlalchemy>=2.0",
  "asyncpg>=0.27",
  "psycopg2-binary>=2.9",
  "redis>=4.5",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "pinecone-client>=2.2.0",
  "elasticsearch>=8.6.0",
  "pydantic>=2.2",
  "httpx>=0.24",
  "aiohttp>=3.8",
  "python-multipart>=0.0.6"
]

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.21"
black = "^24.3"
ruff = "^0.18"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "rag*", "siem*", "frontend*", "ingestion*", "scripts*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
